En la tercer clase vimos de forma rápida el uso de While, vimos ejemplo he hicimos ejericio, de igual forma vimos for, así como su uso en distintos rangos, al final hicimos ejercicios de ambos

--- a/Clase -03.ipynb
+++ b/Clase -03.ipynb
@@ -305,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A chuparla, sacaste 4.4\n"
+      "Reprobaste con 5.0\n"
      ]
     }
    ],
